fix copyright line style on IE

--- a/web/themes/custom/legacy/css/src/_c-Banner.less
+++ b/web/themes/custom/legacy/css/src/_c-Banner.less
@@ -48,17 +48,21 @@
 }
 .c-Banner--copyright {
   // TODO make this a separate object, like `.o-Flex--center`
-  & > .o-Flex__Item {
-    flex: none;
-  }
   justify-content: center;
   align-items: center;
   margin-bottom: 0;       // COMBAK:FALLBACK
   margin-bottom: initial; // COMBAK:FALLBACK
   margin-bottom: unset;   // COMBAK:FALLBACK
-  margin-block-end: unset;
+  margin-block-end: unset; // override base `p`
   padding: 1.5rem 1rem;    // COMBAK:FALLBACK
   padding: var(--lh) 1rem; // COMBAK:FALLBACK
   padding: 1lh 1rem;
   background-color: @g-color-asce-blue;
+  @media (-ms-high-contrast: none), (-ms-high-contrast: active) {
+    display: block; // override .o-Flex
+    text-align: center;
+  }
+  & > .o-Flex__Item {
+    flex: none;
+  }
 }
